# UVNet

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/base-fee/: Cargo.toml
pallets/ethereum/: Cargo.toml
pallets/evm/: Cargo.toml
pallets/evm-chain-id/: Cargo.toml
pallets/evm/precompile/dispatch/: Cargo.toml
pallets/evm/precompile/simple/: Cargo.toml
pallets/evm/test-vector-support/: Cargo.toml
pallets/template/: Cargo.toml
pallets/uvm/: Cargo.toml
pallets/uvm/src/: lib.rs
precompile/template/: Cargo.toml
precompile/utils/: Cargo.toml
precompile/uvm/: Cargo.toml
precompile/uvm/sdk/: IUVM.sol  UVM.sol
precompile/uvm/src/: lib.rs
primitives/consensus/: Cargo.toml
primitives/ethereum/: Cargo.toml
primitives/evm/: Cargo.toml
primitives/rpc/: Cargo.toml
primitives/self-contained/: Cargo.toml
primitives/self-contained/src/: unchecked_extrinsic.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  precompiles.rs
runtime/src/precompiles/template/: Cargo.toml
runtime/src/precompiles/template/example/: pallet_template.sol
runtime/src/precompiles/template/src/: lib.rs
runtime/src/precompiles/utils/: Cargo.toml
runtime/src/precompiles/utils/src/: data.rs  lib.rs
