[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/ethereum",
    "pallets/evm",
    "pallets/evm-chain-id",
    "pallets/evm/precompile/simple",
    "pallets/evm/precompile/modexp",
    "pallets/evm/precompile/blake2",
    "pallets/evm/precompile/dispatch",
    "pallets/evm/precompile/ed25519",
    "pallets/evm/precompile/sha3fips",
    "runtime",
    "precompile/template",
    "precompile/utils",
    "precompile/utils/macro",
    "primitives/consensus",
    "primitives/ethereum",
    "primitives/evm",
    "primitives/rpc",
    "primitives/self-contained",
    "primitives/storage",
]
[profile.release]
panic = "unwind"
